# mcp-api-client

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
skills/: mcp-api.client.md
src/mcp_api_client/: client.py  server.py  types.py
tests/: test_server.py
